--- a/Example_HateExplain.ipynb
+++ b/Example_HateExplain.ipynb
@@ -1345,7 +1345,376 @@
         "id": "A9Ka6ukjTC5M"
       },
       "source": [
-        ""
+        "from collections import Counter,defaultdict\r\n",
+        "from tqdm.notebook import tqdm\r\n",
+        "import json\r\n",
+        "import numpy as np"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UT-IGJ5fZJDs"
+      },
+      "source": [
+        "# get_annotated_data method is used to load the dataset\r\n",
+        "from Preprocess.dataCollect import get_annotated_data  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VahO_sv8ZPKm"
+      },
+      "source": [
+        "dict_data_folder={\r\n",
+        "      '2':{'data_file':'Data/dataset.json','class_label':'Data/classes_two.npy'},\r\n",
+        "      '3':{'data_file':'Data/dataset.json','class_label':'Data/classes.npy'}\r\n",
+        "}\r\n",
+        "\r\n",
+        "params = {}\r\n",
+        "\r\n",
+        "# We need to load the dataset with the labels as 'toxic' and 'non-toxic'. \r\n",
+        "# We consider hatespeech and offensive as toxic and normal as non-toxic.\r\n",
+        "params['num_classes']=2  \r\n",
+        "params['data_file']=dict_data_folder[str(params['num_classes'])]['data_file']\r\n",
+        "params['class_names']=dict_data_folder[str(params['num_classes'])]['class_label']\r\n",
+        "\r\n",
+        "data_all_labelled=get_annotated_data(params)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ey4zh1z3ZTcG"
+      },
+      "source": [
+        "data_all_labelled"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eV83O2M5ZWVz"
+      },
+      "source": [
+        "def generate_target_information(dataset):\r\n",
+        "    final_target_output = defaultdict(list)\r\n",
+        "    all_communities_selected = []\r\n",
+        "    \r\n",
+        "    for each in dataset.iterrows(): \r\n",
+        "        # All the target communities tagged for this post\r\n",
+        "        all_targets = each[1]['target1']+each[1]['target2']+each[1]['target3']  \r\n",
+        "        community_dict = dict(Counter(all_targets))\r\n",
+        "        \r\n",
+        "        # Select only those communities which are present more than once.\r\n",
+        "        for key in community_dict:\r\n",
+        "            if community_dict[key]>1:  \r\n",
+        "                final_target_output[each[1]['post_id']].append(key)\r\n",
+        "                all_communities_selected.append(key)\r\n",
+        "        \r\n",
+        "        # If no community is selected based on majority voting then we don't select any community\r\n",
+        "        if each[1]['post_id'] not in final_target_output:\r\n",
+        "            final_target_output[each[1]['post_id']].append('None')\r\n",
+        "            all_communities_selected.append(key)\r\n",
+        "\r\n",
+        "    return final_target_output, all_communities_selected"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nudf_otKZYv3"
+      },
+      "source": [
+        "target_information, all_communities_selected = generate_target_information(data_all_labelled)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HhcsaISdZaWu"
+      },
+      "source": [
+        "community_count_dict = Counter(all_communities_selected)\r\n",
+        "\r\n",
+        "# We remove None and Other from dictionary\r\n",
+        "community_count_dict.pop('None')\r\n",
+        "community_count_dict.pop('Other')\r\n",
+        "\r\n",
+        "# For the bias calculation, we are considering the top 10 communites based on their count\r\n",
+        "list_selected_community = [community for community, value in community_count_dict.most_common(10)]\r\n",
+        "list_selected_community"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "irVoY4w7ZbtA"
+      },
+      "source": [
+        "# Based on the top 10 communities, we filter the target_information\r\n",
+        "# This will remove the other communities from the calculation\r\n",
+        "\r\n",
+        "final_target_information ={}\r\n",
+        "for each in target_information:\r\n",
+        "    temp = list(set(target_information[each])&set(list_selected_community))\r\n",
+        "    if len(temp) == 0:\r\n",
+        "        final_target_information[each] = None\r\n",
+        "    else:\r\n",
+        "        final_target_information[each] = temp"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n7tDCqdyZdVg"
+      },
+      "source": [
+        "# Add a new column 'final_target_category' which will contain the selected target community names\r\n",
+        "data_all_labelled['final_target_category'] = data_all_labelled['post_id'].map(final_target_information) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qfJUXhZSZe2m"
+      },
+      "source": [
+        "# The post_id_divisions file stores the train, val, test split ids. We select only the test ids.\r\n",
+        "postpost_id_divisions_path = './Data/post_id_divisions.json'\r\n",
+        "\r\n",
+        "with open(postpost_id_divisions_path, 'r') as fp:\r\n",
+        "    post_id_dict=json.load(fp)\r\n",
+        "\r\n",
+        "data_all_labelled_bias = data_all_labelled[data_all_labelled['post_id'].isin(post_id_dict['test'])]\r\n",
+        "data_all_labelled_bias"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pOvAdBreZgRd"
+      },
+      "source": [
+        "from sklearn.metrics import roc_auc_score\r\n",
+        "\r\n",
+        "# The names of the files which will contain the bias output for each model\r\n",
+        "bias_score_file_mapping={\r\n",
+        "    'CNN-GRU':'bestModel_cnn_gru_bias.json',\r\n",
+        "    'BiRNN':'bestModel_birnn_bias.json',\r\n",
+        "    'BiRNN-Attn':'bestModel_birnnatt_bias.json',\r\n",
+        "    'BiRNN-HateXplain':'bestModel_birnnscrat_bias.json',\r\n",
+        "    'BERT': 'bestModel_bert_base_uncased_Attn_train_FALSE_bias.json',\r\n",
+        "    'BERT-HateXplain': 'bestModel_bert_base_uncased_Attn_train_TRUE_bias.json'\r\n",
+        "}\r\n",
+        "\r\n",
+        "# The parent folder path of the bias output files\r\n",
+        "parent_path = './explanations_dicts/'\r\n",
+        "\r\n",
+        "# The bias methods that will be considered\r\n",
+        "method_list = ['subgroup', 'bpsn', 'bnsp']\r\n",
+        "\r\n",
+        "community_list = list(list_selected_community)\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RbzOG9LSZiG-"
+      },
+      "source": [
+        "# This function is used to convert the classification into a [0-1] score \r\n",
+        "# with a value of 0 meaning non-toxic and 1 meaning toxic\r\n",
+        "def convert_to_score(label_name, label_dict):\r\n",
+        "    if label_name=='non-toxic':\r\n",
+        "        return 1-label_dict[label_name]\r\n",
+        "    else:\r\n",
+        "        return label_dict[label_name]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "konkTAP0ZjtX"
+      },
+      "source": [
+        "# Function to divide the ids into postive or class class based on the method.\r\n",
+        "def bias_evaluation_metric(dataset, method, community):\r\n",
+        "    positive_ids = []\r\n",
+        "    negative_ids = []\r\n",
+        "    if method=='subgroup':\r\n",
+        "        for eachrow in dataset.iterrows():\r\n",
+        "            if eachrow[1]['final_target_category'] == None:\r\n",
+        "                continue\r\n",
+        "            if community in eachrow[1]['final_target_category']:\r\n",
+        "                if eachrow[1]['final_label'] =='non-toxic':\r\n",
+        "                    negative_ids.append(eachrow[1]['post_id'])\r\n",
+        "                else:\r\n",
+        "                    positive_ids.append(eachrow[1]['post_id'])\r\n",
+        "            else:\r\n",
+        "                pass\r\n",
+        "    elif method=='bpsn':\r\n",
+        "        for eachrow in dataset.iterrows():\r\n",
+        "            if eachrow[1]['final_target_category'] == None:\r\n",
+        "                continue\r\n",
+        "            if community in eachrow[1]['final_target_category']:\r\n",
+        "#                 print(eachrow[1]['final_label'])\r\n",
+        "                if eachrow[1]['final_label'] =='non-toxic':\r\n",
+        "                    negative_ids.append(eachrow[1]['post_id'])\r\n",
+        "                else:\r\n",
+        "                    pass\r\n",
+        "            else:\r\n",
+        "                if eachrow[1]['final_label'] !='non-toxic':\r\n",
+        "                    positive_ids.append(eachrow[1]['post_id'])\r\n",
+        "                else:\r\n",
+        "                    pass\r\n",
+        "    elif method=='bnsp':\r\n",
+        "        for eachrow in dataset.iterrows():\r\n",
+        "            if eachrow[1]['final_target_category'] == None:\r\n",
+        "                continue\r\n",
+        "            if community in eachrow[1]['final_target_category']:\r\n",
+        "                if eachrow[1]['final_label'] !='non-toxic':\r\n",
+        "                    positive_ids.append(eachrow[1]['post_id'])\r\n",
+        "                else:\r\n",
+        "                    pass\r\n",
+        "            else:\r\n",
+        "                if eachrow[1]['final_label'] =='non-toxic':\r\n",
+        "                    negative_ids.append(eachrow[1]['post_id'])\r\n",
+        "                else:\r\n",
+        "                    pass\r\n",
+        "    else:\r\n",
+        "        print('Incorrect option selected!!!')\r\n",
+        "                \r\n",
+        "    return {'positiveID':positive_ids, 'negativeID':negative_ids}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FUOl1LtTZlnQ"
+      },
+      "source": [
+        "final_bias_dictionary = defaultdict(lambda: defaultdict(dict))\r\n",
+        "\r\n",
+        "# We load each of the model bias output file and compute the bias score using each method for all the community\r\n",
+        "for each_model in tqdm(bias_score_file_mapping):\r\n",
+        "    total_data ={}\r\n",
+        "    with open(parent_path+bias_score_file_mapping[each_model]) as fp:\r\n",
+        "        for line in fp:\r\n",
+        "            data = json.loads(line)\r\n",
+        "            total_data[data['annotation_id']] = data\r\n",
+        "    for each_method in method_list:\r\n",
+        "        for each_community in community_list:\r\n",
+        "            community_data = bias_evaluation_metric(data_all_labelled_bias, each_method, each_community)\r\n",
+        "            truth_values = []\r\n",
+        "            prediction_values = []\r\n",
+        "\r\n",
+        "\r\n",
+        "            label_to_value = {'toxic':1.0, 'non-toxic':0.0}\r\n",
+        "            for each in community_data['positiveID']:\r\n",
+        "                truth_values.append(label_to_value[total_data[each]['ground_truth']])\r\n",
+        "                prediction_values.append(convert_to_score(total_data[each]['classification'], total_data[each]['classification_scores']))\r\n",
+        "\r\n",
+        "            for each in community_data['negativeID']:\r\n",
+        "                truth_values.append(label_to_value[total_data[each]['ground_truth']])\r\n",
+        "                prediction_values.append(convert_to_score(total_data[each]['classification'], total_data[each]['classification_scores']))\r\n",
+        "\r\n",
+        "            roc_output_value = roc_auc_score(truth_values, prediction_values)\r\n",
+        "            final_bias_dictionary[each_model][each_method][each_community] = roc_output_value"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s1cDGizIZnQ4"
+      },
+      "source": [
+        "%precision 4"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OWzm2VcUZpyP"
+      },
+      "source": [
+        "# To combine the per-identity Bias AUCs into one overall measure, we calculate their generalized mean as defined below:\r\n",
+        "power_value = -5\r\n",
+        "num_communities = len(community_list)\r\n",
+        "\r\n",
+        "for each_model in final_bias_dictionary:\r\n",
+        "    for each_method in final_bias_dictionary[each_model]:\r\n",
+        "        temp_value =[]\r\n",
+        "        for each_community in final_bias_dictionary[each_model][each_method]:\r\n",
+        "            temp_value.append(pow(final_bias_dictionary[each_model][each_method][each_community], power_value))\r\n",
+        "        print(each_model, each_method, pow(np.sum(temp_value)/num_communities, 1/power_value))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y136ra6WZsZv"
+      },
+      "source": [
+        "Explainability Calculation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s5eOcG95Zvjv"
+      },
+      "source": [
+        "import json\r\n",
+        "from tqdm.notebook import tqdm\r\n",
+        "import more_itertools as mit\r\n",
+        "import os"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R5XJVkRhZy_N"
+      },
+      "source": [
+        "# get_annotated_data method is used to load the dataset\r\n",
+        "from Preprocess import *\r\n",
+        "from Preprocess.dataCollect import *"
       ],
       "execution_count": null,
       "outputs": []
