Added Bias and Explainability code

--- a/Example_HateExplain.ipynb
+++ b/Example_HateExplain.ipynb
@@ -1718,6 +1718,292 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "edzZEa5xaLKA"
+      },
+      "source": [
+        "dict_data_folder={\r\n",
+        "      '2':{'data_file':'Data/dataset.json','class_label':'Data/classes_two.npy'},\r\n",
+        "      '3':{'data_file':'Data/dataset.json','class_label':'Data/classes.npy'}\r\n",
+        "}\r\n",
+        "\r\n",
+        "# We need to load the dataset with the labels as 'hatespeech', 'offensive', and 'normal' (3-class). \r\n",
+        "\r\n",
+        "params = {}\r\n",
+        "params['num_classes']=3\r\n",
+        "params['data_file']=dict_data_folder[str(params['num_classes'])]['data_file']\r\n",
+        "params['class_names']=dict_data_folder[str(params['num_classes'])]['class_label']\r\n",
+        "\r\n",
+        "data_all_labelled=get_annotated_data(params)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39chuatvaNxP"
+      },
+      "source": [
+        "# The important key here is the 'bert_token'. Set it to True for Bert based models and False for Others.\r\n",
+        "\r\n",
+        "params_data={\r\n",
+        "    'include_special':False,  #True is want to include <url> in place of urls if False will be removed\r\n",
+        "    'bert_tokens':True, #True /False\r\n",
+        "    'type_attention':'softmax', #softmax\r\n",
+        "    'set_decay':0.1,\r\n",
+        "    'majority':2,\r\n",
+        "    'max_length':128,\r\n",
+        "    'variance':10,\r\n",
+        "    'window':4,\r\n",
+        "    'alpha':0.5,\r\n",
+        "    'p_value':0.8,\r\n",
+        "    'method':'additive',\r\n",
+        "    'decay':False,\r\n",
+        "    'normalized':False,\r\n",
+        "    'not_recollect':True,\r\n",
+        "}\r\n",
+        "\r\n",
+        "\r\n",
+        "if(params_data['bert_tokens']):\r\n",
+        "    print('Loading BERT tokenizer...')\r\n",
+        "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=False)\r\n",
+        "else:\r\n",
+        "    print('Loading Normal tokenizer...')\r\n",
+        "    tokenizer=None"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TPfjmV82aTtB"
+      },
+      "source": [
+        "# Load the whole dataset and get the tokenwise rationales\r\n",
+        "def get_training_data(data):\r\n",
+        "    post_ids_list=[]\r\n",
+        "    text_list=[]\r\n",
+        "    attention_list=[]\r\n",
+        "    label_list=[]\r\n",
+        "    \r\n",
+        "    final_binny_output = []\r\n",
+        "    print('total_data',len(data))\r\n",
+        "    for index,row in tqdm(data.iterrows(),total=len(data)):\r\n",
+        "        annotation=row['final_label']\r\n",
+        "        \r\n",
+        "        text=row['text']\r\n",
+        "        post_id=row['post_id']\r\n",
+        "        annotation_list=[row['label1'],row['label2'],row['label3']]\r\n",
+        "        tokens_all = list(row['text'])\r\n",
+        "#         attention_masks =  [list(row['explain1']),list(row['explain2']),list(row['explain1'])]\r\n",
+        "        \r\n",
+        "        if(annotation!= 'undecided'):\r\n",
+        "            tokens_all,attention_masks=returnMask(row, params_data, tokenizer)\r\n",
+        "            final_binny_output.append([post_id, annotation, tokens_all, attention_masks, annotation_list])\r\n",
+        "\r\n",
+        "    return final_binny_output\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "srZsdsLaaWSL"
+      },
+      "source": [
+        "# https://stackoverflow.com/questions/2154249/identify-groups-of-continuous-numbers-in-a-list\r\n",
+        "def find_ranges(iterable):\r\n",
+        "    \"\"\"Yield range of consecutive numbers.\"\"\"\r\n",
+        "    for group in mit.consecutive_groups(iterable):\r\n",
+        "        group = list(group)\r\n",
+        "        if len(group) == 1:\r\n",
+        "            yield group[0]\r\n",
+        "        else:\r\n",
+        "            yield group[0], group[-1]\r\n",
+        "            \r\n",
+        "# Convert dataset into ERASER format: https://github.com/jayded/eraserbenchmark/blob/master/rationale_benchmark/utils.py\r\n",
+        "def get_evidence(post_id, anno_text, explanations):\r\n",
+        "    output = []\r\n",
+        "\r\n",
+        "    indexes = sorted([i for i, each in enumerate(explanations) if each==1])\r\n",
+        "    span_list = list(find_ranges(indexes))\r\n",
+        "\r\n",
+        "    for each in span_list:\r\n",
+        "        if type(each)== int:\r\n",
+        "            start = each\r\n",
+        "            end = each+1\r\n",
+        "        elif len(each) == 2:\r\n",
+        "            start = each[0]\r\n",
+        "            end = each[1]+1\r\n",
+        "        else:\r\n",
+        "            print('error')\r\n",
+        "\r\n",
+        "        output.append({\"docid\":post_id, \r\n",
+        "              \"end_sentence\": -1, \r\n",
+        "              \"end_token\": end, \r\n",
+        "              \"start_sentence\": -1, \r\n",
+        "              \"start_token\": start, \r\n",
+        "              \"text\": ' '.join([str(x) for x in anno_text[start:end]])})\r\n",
+        "    return output\r\n",
+        "\r\n",
+        "# To use the metrices defined in ERASER, we will have to convert the dataset\r\n",
+        "def convert_to_eraser_format(dataset, method, save_split, save_path, id_division):  \r\n",
+        "    final_output = []\r\n",
+        "    \r\n",
+        "    if save_split:\r\n",
+        "        train_fp = open(save_path+'train.jsonl', 'w')\r\n",
+        "        val_fp = open(save_path+'val.jsonl', 'w')\r\n",
+        "        test_fp = open(save_path+'test.jsonl', 'w')\r\n",
+        "            \r\n",
+        "    for tcount, eachrow in enumerate(dataset):\r\n",
+        "        \r\n",
+        "        temp = {}\r\n",
+        "        post_id = eachrow[0]\r\n",
+        "        post_class = eachrow[1]\r\n",
+        "        anno_text_list = eachrow[2]\r\n",
+        "        majority_label = eachrow[1]\r\n",
+        "        \r\n",
+        "        if majority_label=='normal':\r\n",
+        "            continue\r\n",
+        "        \r\n",
+        "        all_labels = eachrow[4]\r\n",
+        "        explanations = []\r\n",
+        "        for each_explain in eachrow[3]:\r\n",
+        "            explanations.append(list(each_explain))\r\n",
+        "        \r\n",
+        "        # For this work, we have considered the union of explanations. Other options could be explored as well.\r\n",
+        "        if method == 'union':\r\n",
+        "            final_explanation = [any(each) for each in zip(*explanations)]\r\n",
+        "            final_explanation = [int(each) for each in final_explanation]\r\n",
+        "        \r\n",
+        "            \r\n",
+        "        temp['annotation_id'] = post_id\r\n",
+        "        temp['classification'] = post_class\r\n",
+        "        temp['evidences'] = [get_evidence(post_id, list(anno_text_list), final_explanation)]\r\n",
+        "        temp['query'] = \"What is the class?\"\r\n",
+        "        temp['query_type'] = None\r\n",
+        "        final_output.append(temp)\r\n",
+        "        \r\n",
+        "        if save_split:\r\n",
+        "            if not os.path.exists(save_path+'docs'):\r\n",
+        "                os.makedirs(save_path+'docs')\r\n",
+        "            \r\n",
+        "            with open(save_path+'docs/'+post_id, 'w') as fp:\r\n",
+        "                fp.write(' '.join([str(x) for x in list(anno_text_list)]))\r\n",
+        "            \r\n",
+        "            if post_id in id_division['train']:\r\n",
+        "                train_fp.write(json.dumps(temp)+'\\n')\r\n",
+        "            \r\n",
+        "            elif post_id in id_division['val']:\r\n",
+        "                val_fp.write(json.dumps(temp)+'\\n')\r\n",
+        "            \r\n",
+        "            elif post_id in id_division['test']:\r\n",
+        "                test_fp.write(json.dumps(temp)+'\\n')\r\n",
+        "            else:\r\n",
+        "                print(post_id)\r\n",
+        "    \r\n",
+        "    if save_split:\r\n",
+        "        train_fp.close()\r\n",
+        "        val_fp.close()\r\n",
+        "        test_fp.close()\r\n",
+        "        \r\n",
+        "    return final_output"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RfhkR05AaZja"
+      },
+      "source": [
+        "# The post_id_divisions file stores the train, val, test split ids. We select only the test ids.\r\n",
+        "with open('./Data/post_id_divisions.json') as fp:\r\n",
+        "    id_division = json.load(fp)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lfI2Ah03abv3"
+      },
+      "source": [
+        "method = 'union'\r\n",
+        "save_split = True\r\n",
+        "save_path = './Data/Evaluation/Model_Eval/'  #The dataset in Eraser Format will be stored here.\r\n",
+        "convert_to_eraser_format(training_data, method, save_split, save_path, id_division)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FHEwmMeiajke"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m1o4wxVNajmz"
+      },
+      "source": [
+        "%cd eraserbenchmark-master"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ATBBz0znakbu"
+      },
+      "source": [
+        "#--data_dir : Location of the folder which contains the dataset in eraser format\r\n",
+        "#--results : The location of the model output file in eraser format\r\n",
+        "#--score_file : The file name and location to write the output\r\n",
+        "\r\n",
+        "!PYTHONPATH=./:$PYTHONPATH python rationale_benchmark/metrics.py --split test --strict --data_dir ../Data/Evaluation/Model_Eval --results ../explanations_dicts/bestModel_birnnscrat_100_explanation_top5.json --score_file ../model_explain_output.json"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hmvCP6r8a2Gl"
+      },
+      "source": [
+        "# print the required results\r\n",
+        "with open('../model_explain_output.json') as fp:\r\n",
+        "    output_data = json.load(fp)\r\n",
+        "\r\n",
+        "print('\\nPlausibility')\r\n",
+        "print('IOU F1 :', output_data['iou_scores'][0]['macro']['f1'])\r\n",
+        "print('Token F1 :', output_data['token_prf']['instance_macro']['f1'])\r\n",
+        "print('AUPRC :', output_data['token_soft_metrics']['auprc'])\r\n",
+        "\r\n",
+        "print('\\nFaithfulness')\r\n",
+        "print('Comprehensiveness :', output_data['classification_scores']['comprehensiveness'])\r\n",
+        "print('Sufficiency', output_data['classification_scores']['sufficiency'])"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
